Alteração index (Bem vindo e Ultimas Noticias)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -852,8 +852,8 @@
 		<div class="slider-inner">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2><i>ENCONTRE UM ESPORTE</i> <br /> <i>RÁPIDO E FÁCIL</i> <br /> <i>EXERCITE-SE</i></h2>
-					<p><i>Milhares de anúncios</i> <br /> <i>De diversos espotes</i> <br /> <i>Profissionais e amadores</i>
+					<h2><i>ENCONTRE SEU ESPORTE</i> <br /> <i>RÁPIDO E FÁCIL</i> <br /> <i>EXERCITE-SE HOJES</i></h2>
+					<p><i>Inúmeros anúncios</i> <br /> <i>De esportes</i> <br /> <i>Profissionais e amadores</i>
 					<br /> <i>Para praticar e compertir</i></p>
 					<div class="da-img"><img class="img-responsive" src="assets/plugins/parallax-slider/img/1.png" alt=""></div>
 				</div>
@@ -1026,31 +1026,30 @@
 			<div class="row margin-bottom-30">
 				<!-- Welcome Block -->
 				<div class="col-md-8 md-margin-bottom-40">
-					<div class="headline"><h2>Welcome To Unify</h2></div>
+					<div class="headline"><h2>Bem vindo ao Sports GO</h2></div>
 					<div class="row">
 						<div class="col-sm-4">
-							<img class="img-responsive margin-bottom-20" src="assets/img/main/img18.jpg" alt="">
+							<img class="img-responsive margin-bottom-20" src="assets/img/esportes-2.png" alt="">
 						</div>
 						<div class="col-sm-8">
-							<p>Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals. It works on all major web browsers, tablets and phone.</p>
+							<p>Sports GO foi pensado como uma ferramenta para inovar sua visão sobre esporte, oferecendo:</p>
 							<ul class="list-unstyled margin-bottom-20">
-								<li><i class="fa fa-check color-green"></i> Donec id elit non mi porta gravida</li>
-								<li><i class="fa fa-check color-green"></i> Corporate and Creative</li>
-								<li><i class="fa fa-check color-green"></i> Responsive Bootstrap Template</li>
-								<li><i class="fa fa-check color-green"></i> Corporate and Creative</li>
+								<li><i class="fa fa-check color-green"></i> Facilidade para praticar esportes</li>
+								<li><i class="fa fa-check color-green"></i> Novidades sobre seu esporte favorito</li>
+								<!-- <li><i class="fa fa-check color-red"></i> Responsive Bootstrap Template</li> -->
 							</ul>
 						</div>
 					</div>
 
 					<blockquote class="hero-unify">
-						<p>Award winning digital agency. We bring a personal and effective approach to every project we work on, which is why. Unify is an incredibly beautiful responsive Bootstrap Template for corporate professionals.</p>
+						<p>O Sports GO é uma idéia que surgiu da necessidade de oferecer novas ideias na forma como as pessoas podem localizar em suas cidades locais, times, notícias sobre seus esportes favoritas. Chegamos para oferecer algo novo e facilitar a vida das pessoas..</p>
 						<small>CEO, Jack Bour</small>
 					</blockquote>
 				</div><!--/col-md-8-->
 
 				<!-- Latest Shots -->
 				<div class="col-md-4">
-					<div class="headline"><h2>Latest Shots</h2></div>
+					<div class="headline"><h2>Últimas Notícias</h2></div>
 					<div id="myCarousel" class="carousel slide carousel-v1">
 						<div class="carousel-inner">
 							<div class="item active">
@@ -1171,13 +1170,13 @@
 
 						<!-- Address -->
 						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div class="headline"><h2>Contact Us</h2></div>
+							<div class="headline"><h2>Contate-nos</h2></div>
 							<address class="md-margin-bottom-40">
-								25, Lorem Lis Street, Orange <br />
-								California, US <br />
+								Escritório: Alameda Palmeiras - Chácaras Califórnia, 74690-900 <br />
+								Goiânia - GO <br />
 								Phone: 800 123 3456 <br />
 								Fax: 800 123 3456 <br />
-								Email: <a href="mailto:info@anybiz.com" class="">info@anybiz.com</a>
+								Email: <a href="sportsgo@mail.com" class="">sportsgo@mail.com</a>
 							</address>
 						</div><!--/col-md-3-->
 						<!-- End Address -->
@@ -1190,8 +1189,8 @@
 					<div class="row">
 						<div class="col-md-6">
 							<p>
-								2016 &copy; All Rights Reserved.
-								<a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> | Theme by <a href="http://maxtheme.net">MaxTheme.net</a>
+								2016 &copy; Todos os direitos Reservados.
+								<a href="#">Politica de Privacidade</a> | <a href="#">Termos de Serviço</a>
 							</p>
 						</div>
 
