--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -237,7 +237,7 @@
 						<!-- Pages -->
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-								Pages
+								Eventos
 							</a>
 							<ul class="dropdown-menu">
 								<!-- About Pages -->
@@ -852,7 +852,7 @@
 		<div class="slider-inner">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2><i>ENCONTRE SEU ESPORTE</i> <br /> <i>RÁPIDO E FÁCIL</i> <br /> <i>EXERCITE-SE HOJES</i></h2>
+					<h2><i>ENCONTRE SEU ESPORTE</i> <br /> <i>RÁPIDO E FÁCIL</i> <br /> <i>EXERCITE-SE HOJE</i></h2>
 					<p><i>Inúmeros anúncios</i> <br /> <i>De esportes</i> <br /> <i>Profissionais e amadores</i>
 					<br /> <i>Para praticar e compertir</i></p>
 					<div class="da-img"><img class="img-responsive" src="assets/plugins/parallax-slider/img/1.png" alt=""></div>
@@ -1053,21 +1053,21 @@
 					<div id="myCarousel" class="carousel slide carousel-v1">
 						<div class="carousel-inner">
 							<div class="item active">
-								<img src="assets/img/main/img4.jpg" alt="">
+								<img src="assets/img/Tenis-torneio.jpg" alt="">
 								<div class="carousel-caption">
-									<p>Facilisis odio, dapibus ac justo acilisis gestinas.</p>
+									<p>Realizado primeiro torneio de Tenis organizado pelo Sports GO </p>
 								</div>
 							</div>
 							<div class="item">
-								<img src="assets/img/main/img2.jpg" alt="">
+								<img src="assets/img/contrate-player.jpg" alt="">
 								<div class="carousel-caption">
-									<p>Cras justo odio, dapibus ac facilisis into egestas.</p>
+									<p>Lançado o serviço contrate um jogador para a modalidade futebol.</p>
 								</div>
 							</div>
 							<div class="item">
-								<img src="assets/img/main/img24.jpg" alt="">
+								<img src="assets/img/quadra-Reserve.jpg" alt="">
 								<div class="carousel-caption">
-									<p>Justo cras odio apibus ac afilisis lingestas de.</p>
+									<p>Lançado o serviço reserve um espaço.</p>
 								</div>
 							</div>
 						</div>
