--- a/src/main/webapp/futebol.html
+++ b/src/main/webapp/futebol.html
@@ -902,7 +902,9 @@
 
 						<!-- Início Fale Conosco -->
 						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div><h2>FALE CONOSCO</h2></div>
+							<div>
+								<h2><strong>FALE CONOSCO</strong></h2>
+							</div>
 							<address class="md-margin-bottom-40">
 								Alameda Palmeiras, s/n <br/>
 								Câmpus Samambaia, Goiânia - GO <br/>
