--- a/src/main/webapp/natacao.html
+++ b/src/main/webapp/natacao.html
@@ -88,7 +88,10 @@
 			<div class="collapse navbar-collapse mega-menu navbar-responsive-collapse">
 				<div class="container">
 					<ul class="nav navbar-nav">
-						<!-- Home -->
+						<!-- Esportes -->
+						<li class="active">
+							<a href="index.html">Home</a>
+						</li>
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
 								Esportes
