--- a/src/main/webapp/tenis.html
+++ b/src/main/webapp/tenis.html
@@ -88,7 +88,10 @@
 			<div class="collapse navbar-collapse mega-menu navbar-responsive-collapse">
 				<div class="container">
 					<ul class="nav navbar-nav">
-						<!-- Home -->
+						<!-- Esportes -->
+						<li class="active">
+							<a href="index.html">Home</a>
+						</li>
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
 								Esportes
@@ -842,7 +845,9 @@
 
 						<!-- Início Fale Conosco -->
 						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div><h2>FALE CONOSCO</h2></div>
+							<div>
+								<h2><strong>FALE CONOSCO</strong></h2>
+							</div>
 							<address class="md-margin-bottom-40">
 								Alameda Palmeiras, s/n <br/>
 								Câmpus Samambaia, Goiânia - GO <br/>
