--- a/src/main/webapp/volei.html
+++ b/src/main/webapp/volei.html
@@ -46,6 +46,7 @@
 
 <body class="header-fixed">
 	<div>
+		
 		<!--=== Header ===-->
 		<div class="header">
 			<div class="container">
@@ -88,7 +89,10 @@
 			<div class="collapse navbar-collapse mega-menu navbar-responsive-collapse">
 				<div class="container">
 					<ul class="nav navbar-nav">
-						<!-- Home -->
+						<!-- Esportes -->
+						<li class="active">
+							<a href="index.html">Home</a>
+						</li>
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
 								Esportes
@@ -625,6 +629,7 @@
 				</div><!--/end container-->
 			</div><!--/navbar-collapse-->
 		</div>
+		<!--=== End Header ===--></div>
 		<!--=== End Header ===-->
 
 
@@ -858,7 +863,9 @@
 
 						<!-- Início Fale Conosco -->
 						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div><h2>FALE CONOSCO</h2></div>
+							<div>
+								<h2><strong>FALE CONOSCO</strong></h2>
+							</div>
 							<address class="md-margin-bottom-40">
 								Alameda Palmeiras, s/n <br/>
 								Câmpus Samambaia, Goiânia - GO <br/>
