--- a/src/main/webapp/basquete.html
+++ b/src/main/webapp/basquete.html
@@ -2,7 +2,7 @@
 
 <html lang="en"> 
 <head>
-	<title>Cadastro conta</title>
+	<title>Basquetebol</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -10,14 +10,17 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
+	<!-- CSS Estilo -->
+	<link rel="stylesheet" href="lib/css/estilo.css">
+	<link rel="stylesheet" href="lib/css/bootstrap.css">
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Web Fonts -->
-	<link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin">
 
 	<!-- CSS Global Compulsory -->
-	<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="lib/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 
 	<!-- CSS Header and Footer -->
@@ -28,9 +31,8 @@
 	<link rel="stylesheet" href="assets/plugins/animate.css">
 	<link rel="stylesheet" href="assets/plugins/line-icons/line-icons.css">
 	<link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
-
-	<!-- CSS Page Style -->
-	<link rel="stylesheet" href="assets/css/pages/page_log_reg_v1.css">
+	<link rel="stylesheet" href="assets/plugins/cube-portfolio/cubeportfolio/css/cubeportfolio.min.css">
+	<link rel="stylesheet" href="assets/plugins/cube-portfolio/cubeportfolio/custom/custom-cubeportfolio.css">
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="assets/css/theme-colors/default.css" id="style_color">
@@ -39,25 +41,11 @@
 	<!-- CSS Customization -->
 	<link rel="stylesheet" href="assets/css/custom.css">
 	
-	<script src="lib/js/angular/angular.js"></script>
-	<script src="lib/js/jquery/jquery.js"></script>
-	<script src="lib/js/script/script.js"></script>
-	
-	<script type="text/javascript" src="assets/plugins/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/plugins/jquery/jquery-migrate.min.js"></script>
-	<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-	<!-- JS Implementing Plugins -->
-	<script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
-	<script type="text/javascript" src="assets/plugins/smoothScroll.js"></script>
-	<!-- JS Customization -->
-	<script type="text/javascript" src="assets/js/custom.js"></script>
-	<!-- JS Page Level -->
-	<script type="text/javascript" src="assets/js/app.js"></script>
-	<script type="text/javascript" src="assets/js/plugins/style-switcher.js"></script>
+
 </head>
 
-<body ng-controller="logarCtrl">
-	<div class="wrapper">
+<body class="header-fixed">
+	<div>
 		<!--=== Header ===-->
 		<div class="header">
 			<div class="container">
@@ -100,10 +88,7 @@
 			<div class="collapse navbar-collapse mega-menu navbar-responsive-collapse">
 				<div class="container">
 					<ul class="nav navbar-nav">
-						<!-- Esportes -->
-						<li class="active">
-							<a href="index.html">Home</a>
-						</li>
+						<!-- Home -->
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
 								Esportes
@@ -642,57 +627,183 @@
 		</div>
 		<!--=== End Header ===-->
 
-		<!--=== Breadcrumbs ===-->
-		<div class="breadcrumbs">
-			<div class="container">
-				<h1 class="pull-left">Login</h1>
-				<ul class="pull-right breadcrumb">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="">Pages</a></li>
-					<li class="active">Login</li>
-				</ul>
-			</div><!--/container-->
-		</div><!--/breadcrumbs-->
-		<!--=== End Breadcrumbs ===-->
 
-		<!--=== Content Part ===-->
-		<div class="container content">
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-					<form class="reg-page">
-						<div class="reg-header">
-							<h2>Cadastra-se</h2>
-						</div>
+		<br><br>
+		<div class="container back jumbotron">
+			<h1 class="text-center">
+				Basquetebol
+			</h1>
+		</div>
 
-						<div class="input-group margin-bottom-20">
-							<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							<input ng-model="cadastro.usuario" type="text" placeholder="Usuário" class="form-control" name="usuario">
-						</div>
-						<div class="input-group margin-bottom-20">
-							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-							<input ng-model="cadastro.senha" type="password" placeholder="Senha" class="form-control" name="senha">
-						</div>
 
-						<div class="row">
-							<div class="col-md-6 checkbox">
-								<label><input type="checkbox">Manter conectado</label>
+
+		<!--=== Container Part ===-->
+		<div class="container back jumbotron">	
+			<div class="content">
+				<!-- Magazine Slider -->
+				<div class="carousel slide carousel-v2 margin-bottom-40" id="portfolio-carousel">
+					<ol class="carousel-indicators">
+						<li class="active rounded-x" data-target="#portfolio-carousel" data-slide-to="0"></li>
+						<li class="rounded-x" data-target="#portfolio-carousel" data-slide-to="1"></li>
+						<li class="rounded-x" data-target="#portfolio-carousel" data-slide-to="2"></li>
+					</ol>
+
+					<div class="carousel-inner">
+						<div class="item active">
+							<img class="full-width img-responsive" src="lib/img/basquete/basquete_slide1.jpg" alt="">
+						</div>
+						<div class="item">
+							<img class="full-width img-responsive" src="lib/img/basquete/basquete_slide2.jpg" alt="">
+						</div>
+						<div class="item">
+							<img class="full-width img-responsive" src="lib/img/basquete/basquete_slide3.jpg" alt="">
+						</div>
+					</div>
+
+					<a class="left carousel-control rounded-x" href="#portfolio-carousel" role="button" data-slide="prev">
+						<i class="fa fa-angle-left arrow-prev"></i>
+					</a>
+					<a class="right carousel-control rounded-x" href="#portfolio-carousel" role="button" data-slide="next">
+						<i class="fa fa-angle-right arrow-next"></i>
+					</a>
+				</div>
+				<!-- End Magazine Slider -->
+
+				<div class="img-esportes row margin-bottom-60">
+					<div class="col-sm-12">
+						<div class="headline"><h2>História</h2></div>
+						<p>A história do basquetebol começou quando em 1891, o professor de Educação Física canadense chamado James Naismit que trabalhava numa escola em Springfield, Massachussets, teve que criar um novo esporte por ordem do diretor da escola para ser uma alternativa ao Futebol Americano e ao Baseball que se praticavam no exterior e no Inverno era impossível a sua prática (muito frio e neve).</p>
+						<p>Decidiu pendurar duas cestas de pêssegos a 3,05 metros do chão (medida que nunca foi mudada até aos dias de hoje) e o jogo consistia em meter a bola dentro da cesta do adversário. Logo de inicio criou 13 regras principais pelas quais o jogo se regia.</p>
+						<p>Algumas mudanças foram logo surgindo como a de cortar o fundo da cesta para que não se tivesse sempre de interromper o jogo quando alguém marcava. Foram implementadas as tabelas, o que deu origem aos rebotes, entre outras coisas.</p>
+						<p>O jogo ficou bastante popular e em 1936 já se estava a estrear como modalidade Olímpica.</p>
+						<img src="lib/img/basquete/basquete1.jpg"/><br><br>
+						<div class="headline"><h2>O jogo</h2></div>
+						<p>As regras do basquetebol têm algumas diferenças entre a NBA e todas as outras competições, tentando obter alguma melhoria em certos aspetos, mas a tendência é que essas diferenças vão desaparecendo com o tempo.</p>
+						<div class="headline"><h2>Quadra de basquetebol</h2></div>
+						<a>A quadra de basquetebol deve ser rígida e livre de obstruções, com as medidas de 28 metros de comprimento por 15 metros de largura.</a>
+						<p>O campo tem várias linhas e marcações que iremos agora explicar uma a uma, com ajuda da seguinte imagem para as identificar:</p>
+						<div class="headline"><h4>Linhas laterais</h4></div>
+						<p>Estas linhas encontram-se nas laterais da quadra e delimitam a mesma, marcando a zona válida para se jogar.</p>
+						<div class="headline"><h4>Linha limite</h4></div>
+						<p>Esta linha também serve para delimitar o campo e é dela que os jogadores repõem a bola em jogo quando ela saí ou é feita uma cesta.</p>
+						<div class="headline"><h4>Linha central</h4></div>
+						<p>A linha central é a responsável por dividir o campo ao meio e definir qual zona defensiva e atacante pertence a que equipa.</p>
+						<div class="headline"><h4>Linha de 3 pontos</h4></div>
+						<p>Os arremessos que são feitos atrás desta linha valem 3 pontos de entrarem. A linha fica a 6,75 metros da cesta.</p>
+						<div class="headline"><h4>Linha de lance livre</h4></div>
+						<p>É desta linha que os jogadores que vão efetuar um lance livre lançam a bola. No lançamento o jogador não pode pisar a linha nem ultrapassa-la antes que a bola toque no aro.</p>
+						<div class="headline"><h4>Círculo de lance livre</h4></div>
+						<p>Os círculos de lance livre tem um diâmetro de 3,65 metros. Durante o arremesso de lance livre, o atirador deve permanecer dentro do círculo de lance livre.</p>
+						<div class="headline"><h4>Lane line</h4></div>
+						<p>Estas linhas servem para indicar onde os jogadores devem se posicionar quando for ser executado um Lance Livre e também delimita a zona restritiva.Os jogadores não podem sair da sua posição e entrar na zona restritiva até que a bola saia da mão do arremessador.</p>
+						<div class="headline"><h4>Circulo central</h4></div>
+						<p>Tem cerca de 3,65 metros de diâmetro e é localizado no centro da quadra de basquetebol. Serve para delimitar a zona onde os jogadores que não estão na bola ao ar, tendo que ficar fora dela até que algum desses dois toque na bola.</p>
+						<img src="lib/img/basquete/quadra.jpg"/><br><br>
+						<div class="headline"><h2>Características e objetivos do basquetebol</h2></div>
+						<p>O jogo de basquetebol é constituído por duas equipas, cada uma com 10 jogadores (5 titulares e 5 reservas) que têm como objetivo fazer o máximo de pontos possível durante o jogo. Ganha a equipa com mais pontos no final.</p>
+						<p>Este é dividido em 4 tempos, cada um com 10 minutos.</p>
+						<p>A posse de bola é decidida com uma bola ao ar, lançada pelo árbitro, e cada equipa escolhe um jogador para tentar conseguir alcançar a bola e desvia-la para um colega de equipa. Este lançamento de bola tem algumas regras, sendo elas:</p>
+						<p>Os dois jogadores devem estar com os pés dentro da sua metade do campo;</p>
+						<p>A bola é lançada na vertical e os jogadores só podem tocar na bola quando esta alcançar o seu ponto mais alto;</p>
+						<p>Os outros jogadores devem permanecer fora do circulo central até que algum daqueles dois jogadores toque na bola;</p>
+						<img src="lib/img/basquete/basquete2.jpg"/><br><br>
+						<div class="headline"><h2>Passes</h2></div>
+						<p>Existem inúmeros tipos de passe possíveis que se podem fazer, não existindo propriamente nenhuma regra que os limite, sendo que existem alguns que são mais frequentes e normalmente são os primeiros a ser ensinados:</p>
+						<p>Passe de peito;</p>
+						<p>Passe só com uma mão;</p>
+						<p>Passe picado;</p>
+						<p>Passe em apoio;</p>
+						<img src="lib/img/basquete/basquete3.jpg"/><br><br>
+						<div class="headline"><h2>Regras do basquetebol</h2></div>
+						<p>As regras de basquetebol ainda são bastantes e existem para as mais variadas situações. Para evitar ser muito aborrecido, vamos listar algumas das mais comuns e importantes.</p>
+						<div class="headline"><h4>Penalização de faltas</h4></div>
+						<p>Cada equipa pode cometer 4 faltas por período (sendo ela falta pessoal). A partir da 5ª, todas as faltas pessoais feitas nesse período dão direito a lance livre por parte da outra equipa.</p>
+						<div class="headline"><h4>Acumulação de faltas</h4></div>
+						<p>Um jogador não pode acumular 5 faltas durante o jogo. Se acontecer, ele esta fora do jogo.</p>
+						<div class="headline"><h4>Falas(Lugar)</h4></div>
+						<p>Cada vez que uma feita na zona restritiva, a falta dá direito a um lance livre. Se for fora, então a equipa repõe a bola em jogo na linha lateral, no local mais perto de onde foi feita a falta (isto se a equipa não tiver já acumulado faltas naquele período).</p>
+						<div class="headline"><h4>Passos e dribles</h4></div>
+						<p>Depois de receber a bola, o jogador pode fazer dois apoios. Se quando a receber tiver com um pé atrás, pode girar em volta desse pé sem contar um apoio. Depois de driblar e segurar a bola, ele não pode fazer um drible novamente.</p>
+						<div class="headline"><h4>Regra de 3 segundos</h4></div>
+						<p>Um jogador não pode permanecer por mais de 3 segundos na área restritiva do adversário quando a equipa esta com a posse de bola.</p>
+						<div class="headline"><h4>Regra de 5 segundos</h4></div>
+						<p>O jogador com a posse de bola não a pode manter por mais de 5 segundos nas mãos, podendo driblar por tempo indefinido com ela.</p>
+						<div class="headline"><h4>Regra de 8 segundos</h4></div>
+						<p>A equipa com a possa de bola tem 8 segundos para fazer chegar a bola á metade adversária. Depois de o fazer não pode driblar de volta para a sua metade ou que seja feito um passe para lá.</p>
+						<div class="headline"><h4>Regra de 24 segundos</h4></div>
+						<img src="lib/img/basquete/basquete4.jpg"/>
+						<div class="headline"><h2>Posições dos jogadores</h2></div>
+						<p>Como os jogadores em campo no basquete são poucos, as posições também o são, sendo elas de fácil compreensão e de memorizar:</p>
+						<div class="headline"><h4>Armador(PG)</h4></div>
+						<p>É o jogador que fica no centro e começa a jogada. Ele é o cérebro da equipa e é nele que as jogadas começam.</p>
+						<div class="headline"><h4>Extremos(SG)</h4></div>
+						<p>Estes são os jogadores que estão mais perto da linha lateral. Normalmente tem como função ajudar o armador ou marcar muitos pontos, geralmente até da marca de 3 pontos</p>
+						<div class="headline"><h4>Postes(PF)</h4></div>
+						<p>Os Pivôs normalmente são os jogadores maiores e mais fortes. Eles ficam mais perto da zona restritiva do adversário e de baixo do cesto para fazer enterradas, pontes e apanhar os rebotes.</p>
+						<img src="lib/img/basquete/basquete5.jpg"/>
+						<div class="headline"><h2>Árbitros no basquetebol</h2></div>
+						<p>Como não podiam faltar, o basquetebol também possuí vários árbitros e membros do staff, sendo eles:</p>
+						<div class="headline"><h4>Três árbitros)</h4></div>
+						<p>Estes são os responsáveis por comandar o jogo e garantir que os jogadores cumprem as regras de basquetebol.</p>
+						<div class="headline"><h4>Marcador e auxiliar</h4></div>
+						<div class="headline"><h4>Cronometrista</h4></div>
+						<p>Responsável pelo relógio do jogo e o tempo de descontos.</p>
+						<div class="headline"><h4>Operador dos 24 segundos</h4></div>
+					</div>
+					
+				</div>
+			
+				<div class="headline"><h2>Modalidades de Basquetebol</h2></div>
+
+				<div class="cube-portfolio">
+					<div id="grid-container" class="cbp-l-grid-agency">
+						<div class="cbp-item">
+							<div class="cbp-caption margin-bottom-20">
+								<div class="cbp-caption-defaultWrap">
+									<img src="lib/img/basquete/basquete_quadra.jpg" alt="">
+								</div>
+								<div class="cbp-caption-activeWrap">
+									<div class="cbp-l-caption-alignCenter">
+										<div class="cbp-l-caption-body">
+											<ul class="link-captions no-bottom-space">
+												<li><a href="#"><i class="rounded-x fa fa-link"></i></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
 							</div>
-							<div class="col-md-6">
-								<a href="page_login.html">
-									<input type="button" ng-click="cadastrar()" class="btn btn-primary btn-block pull-right"  id="cadastrar_usuario" value="Cadastrar">
-								</a>
+							<div class="cbp-title-dark">
+								<div class="cbp-l-grid-agency-title">Basquetebol de quadra</div>
+							</div>
+						</div>
+						<div class="cbp-item">
+							<div class="cbp-caption margin-bottom-20">
+								<div class="cbp-caption-defaultWrap">
+									<img src="lib/img/basquete/basquete_rua.jpg" alt="">
+								</div>
+								<div class="cbp-caption-activeWrap">
+									<div class="cbp-l-caption-alignCenter">
+										<div class="cbp-l-caption-body">
+											<ul class="link-captions no-bottom-space">
+												<li><a href="#"><i class="rounded-x fa fa-link"></i></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="cbp-title-dark">
+								<div class="cbp-l-grid-agency-title">Basquete de rua</div>
 							</div>
 						</div>
 						
-						<hr>
-
-					</form>
+					</div>
 				</div>
-			</div><!--/row-->
-		</div><!--/container-->
-		<!--=== End Content Part ===-->
+			</div>
+		</div>
 
-			<div class="footer-v1">
+		<br><br>
+
+		<div class="footer-v1">
 			<div class="footer">
 				<div class="container">
 					<div class="row">
@@ -753,13 +864,16 @@
 								<li><a href="#">Trabalhe conosco</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="#">Comunidade</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="#">Contato</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="#">Parceiros</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- Fim Links Úteis -->
 
 						<!-- Início Fale Conosco -->
 						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div><h2><strong>FALE CONOSCO</strong></h2></div>
+							<div>
+								<h2><strong>FALE CONOSCO</strong></h2>
+							</div>
 							<address class="md-margin-bottom-40">
 								Alameda Palmeiras, s/n <br/>
 								Câmpus Samambaia, Goiânia - GO <br/>
@@ -776,13 +890,14 @@
 				</div>
 			</div>
 
+
 			<div class="copyright">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
 							<p>
-								2016 &copy; Todos os direitos Reservados.
-								<a href="#">Politica de Privacidade</a> | <a href="#">Termos de Serviço</a>
+								2015 &copy; Todos os direitos reservados.
+								<a href="#">Política de privacidade</a> | <a href="#">Termos de uso</a>
 							</p>
 						</div>
 
@@ -835,7 +950,19 @@
 	</div><!--/wrapper-->
 
 	<!-- JS Global Compulsory -->
-
+	<script type="text/javascript" src="assets/plugins/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/plugins/jquery/jquery-migrate.min.js"></script>
+	<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+	<!-- JS Implementing Plugins -->
+	<script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
+	<script type="text/javascript" src="assets/plugins/smoothScroll.js"></script>
+	<script type="text/javascript" src="assets/plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
+	<!-- JS Customization -->
+	<script type="text/javascript" src="assets/js/custom.js"></script>
+	<!-- JS Page Level -->
+	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="assets/js/plugins/cube-portfolio/cube-portfolio-4.js"></script>
+	<script type="text/javascript" src="assets/js/plugins/style-switcher.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
 			App.init();
