Alteração Index e Eventos com criação inicial das páginas que comportarão eventos na modalidade futebol e segundo semestre de 2016.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -240,9 +240,6 @@
                                 Eventos
                             </a>
                             <ul class="dropdown-menu">
-                                    <!-- All -->
-                                <li><a href="page_terms.html">Todos</a></li>
-                                <!-- End All -->
 
                                 <!-- Por esporte -->
                                 <li class="dropdown-submenu">
@@ -251,7 +248,7 @@
                             
                                 <!-- FutebolNews -->
                                 <li>
-                                    <a href="portfolio_single_item.html">
+                                    <a href="events_Futebol.html">
                                         <img class="menu-categoria" src="lib/img/bola.png"/>
                                         Futebol
                                     </a>
