Atualização Páginas Eventos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -323,7 +323,7 @@
                                             <a href="javascript:void(0);">2016</a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="index.hmtl">1 Semestre</a></li>
-                                                <li><a href="index.hmtl">2 Semestre</a></li>
+                                                <li><a href="eventsSecondSemester2016.html">2 Semestre</a></li>
                                             </ul>
                                         </li>
 
