--- a/src/main/webapp/cadastro_login.html
+++ b/src/main/webapp/cadastro_login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en"> 
+<html lang="en" ng-app="novoLogin"> 
 <head>
 	<title>Cadastro conta</title>
 
@@ -38,10 +38,13 @@
 
 	<!-- CSS Customization -->
 	<link rel="stylesheet" href="assets/css/custom.css">
+
+	<link rel="stylesheet" href="lib/css/estilo.css">
 	
-	<script src="lib/js/angular/angular.js"></script>
-	<script src="lib/js/jquery/jquery.js"></script>
-	<script src="lib/js/script/script.js"></script>
+	<script src="lib/Javascript/angular/angular-route.js"></script>
+	<script src="lib/Javascript/angular/angular.js"></script>
+	<script src="lib/Javascript/Jquery/jquery.js"></script>
+	<script src="lib/Javascript/Script/script.js"></script>
 	
 	<script type="text/javascript" src="assets/plugins/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/plugins/jquery/jquery-migrate.min.js"></script>
@@ -56,7 +59,7 @@
 	<script type="text/javascript" src="assets/js/plugins/style-switcher.js"></script>
 </head>
 
-<body ng-controller="logarCtrl">
+<body ng-controller="novoLoginCtrl">
 	<div class="wrapper">
 		<!--=== Header ===-->
 		<div class="header">
@@ -659,31 +662,39 @@
 		<div class="container content">
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-					<form class="reg-page">
+					<form class="reg-page"  name="loginForm" novalidate>
 						<div class="reg-header">
-							<h2>Cadastra-se</h2>
+							<h2 id="logincad">Cadastra-se</h2>
 						</div>
 
 						<div class="input-group margin-bottom-20">
 							<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							<input ng-model="cadastro.usuario" type="text" placeholder="Usuário" class="form-control" name="usuario">
+							<input  type="text" placeholder="Usuário" class="form-control" name="usuario" ng-model="usuario" required>
+						</div>
+						<div class="input-group margin-bottom-20">
+							<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+							<input class="form-control" type="email" name="email" placeholder="Email" ng-model="email" ng-required="true" ng-patter="/^\w{10}@\w{10}$/">
 						</div>
 						<div class="input-group margin-bottom-20">
 							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-							<input ng-model="cadastro.senha" type="password" placeholder="Senha" class="form-control" name="senha">
+							<input  type="password" placeholder="Senha" class="form-control" name="senha" ng-model="senha" ng-required="true" ng-required="true" ng-pattern="/^\d{6,8}$/">
 						</div>
-
+						<div class="input-group margin-bottom-20">
+							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+							<input  type="password" placeholder="Confirmar Senha" class="form-control" name="senha_confirm" ng-model="senha_confirm" ng-required="true" ng-pattern="/^\d{6,8}$/">
+						</div>		
 						<div class="row">
-							<div class="col-md-6 checkbox">
-								<label><input type="checkbox">Manter conectado</label>
-							</div>
-							<div class="col-md-6">
-								<a href="page_login.html">
-									<input type="button" ng-click="cadastrar()" class="btn btn-primary btn-block pull-right"  id="cadastrar_usuario" value="Cadastrar">
-								</a>
+							<div class="col-md-6 col-md-offset-3">
+								<a id="ir-login" href="page_login.html"> <input ng-click="cadastrar()" ng-disabled="loginForm.$invalid" type="button" class="btn btn-primary btn-block pull-right" value="Cadastrar"></a>
 							</div>
 						</div>
-						
+						<br>
+						<div class="erro-senha alert alert-danger" ng-model="erro">{{erro}}</div>
+						<div class="submit-sucess alert alert-info" ng-model="sucess">{{sucess}}</div>
+						<div ng-show="loginForm.email.$invalid && loginForm.email.$dirty" class="alert alert-danger">Por favor preencha um email válido no formado ####@####</div>
+						<div ng-show="loginForm.senha.$invalid && loginForm.senha.$dirty" class="alert alert-danger">Senha deve ser numérica de 6~8 dígitos!!</div>
+						<div ng-show="loginForm.senha_confirm.$invalid && loginForm.senha_confirm.$dirty" class="alert alert-danger">Confirmação de senha deve numérica de 6~8 dígitos!!</div>
+						<div ng-show="loginForm.usuario.$invalid && loginForm.usuario.$dirty" class="alert alert-danger">Por favor preencha o campo usuário</div>
 						<hr>
 
 					</form>
@@ -839,7 +850,9 @@
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
 			App.init();
+			OwlCarousel.initOwlCarousel();
 			StyleSwitcher.initStyleSwitcher();
+			ParallaxSlider.initParallaxSlider();
 		});
 	</script>
 
