Submissão realizada no LAB - 13/10.

--- a/src/main/webapp/cadastro_login.html
+++ b/src/main/webapp/cadastro_login.html
@@ -671,6 +671,7 @@
 							<span class="input-group-addon"><i class="fa fa-user"></i></span>
 							<input  type="text" placeholder="Usuário" class="form-control" name="usuario" ng-model="usuario" required>
 						</div>
+						
 						<div class="input-group margin-bottom-20">
 							<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
 							<input class="form-control" type="email" name="email" placeholder="Email" ng-model="email" ng-required="true" ng-patter="/^\w{10}@\w{10}$/">
@@ -682,6 +683,14 @@
 						<div class="input-group margin-bottom-20">
 							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
 							<input  type="password" placeholder="Confirmar Senha" class="form-control" name="senha_confirm" ng-model="senha_confirm" ng-required="true" ng-pattern="/^\d{6,8}$/">
+						</div>
+						<div class="input-group margin-bottom-20">
+							<span class="input-group-addon"><i class="fa fa-user"></i></span>
+							<input  type="text" placeholder="Cidade" class="form-control" name="cidade" ng-model="cidade" required>
+						</div>	
+						<div class="input-group margin-bottom-20">
+							<span class="input-group-addon"><i class="fa fa-user"></i></span>
+							<input  type="text" placeholder="Estado" class="form-control" name="estado" ng-model="estado" required>
 						</div>		
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3">
