--- a/src/main/webapp/eventsSecondSemester2016.html
+++ b/src/main/webapp/eventsSecondSemester2016.html
@@ -302,7 +302,7 @@
                                             <a href="javascript:void(0);">2016</a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="index.hmtl">1 Semestre</a></li>
-                                                <li><a href="index.hmtl">2 Semestre</a></li>
+                                                <li><a href="eventsSecondSemester2016.html">2 Semestre</a></li>
                                             </ul>
                                         </li>
 
@@ -685,7 +685,7 @@
 								</ul>
 							</div>
 							<div class="col-md-8">
-								<h2><a href="#">[Em Breve] - Final Campeonato de Futsal Escolas Estaduais Goiânia 12/10/16</a></h2>
+								<h2><a href="#">[A realizar-se] - Final Campeonato de Futsal Escolas Estaduais Goiânia 12/10/16</a></h2>
 								<ul class="list-unstyled funny-boxes-rating">
 									<li><i class="fa fa-star"></i></li>
 									<li><i class="fa fa-star"></i></li>
@@ -703,14 +703,14 @@
 					<div class="funny-boxes funny-boxes-top-sea">
 						<div class="row">
 							<div class="col-md-4 funny-boxes-img">
-								<img class="img-responsive" src="assets/img/main/img16.jpg" alt="">
+								<img class="img-responsive" src="assets/img/semifinal.jpg" alt="">
 								<ul class="list-unstyled">
 									<li><i class="fa-fw fa fa-briefcase"></i> SESI, Vila Canaã</li>
 									<li><i class="fa-fw fa fa-map-marker"></i> Goiânia, GO</li>
 								</ul>
 							</div>
 							<div class="col-md-8">
-								<h2><a href="#">Oluptatum Box</a></h2>
+								<h2><a href="#">[Realizado] Semifinal - Campeonato de Futsal Escolas Estaduais Goiânia 10/10/16</a></h2>
 								<ul class="list-unstyled funny-boxes-rating">
 									<li><i class="fa fa-star"></i></li>
 									<li><i class="fa fa-star"></i></li>
@@ -718,7 +718,7 @@
 									<li><i class="fa fa-star"></i></li>
 									<li><i class="fa fa-star-o"></i></li>
 								</ul>
-								<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum.</p>
+								<p>No dia 12/10/16 ocorreu no SESI Vila Canaã a semifinal do campeonato de futsal das Escolas estaduais de Goiânia. Participaram da final os colégios Assis Aquino e o colégio Marinho de Aquino.</p>
 							</div>
 						</div>
 					</div>
@@ -735,14 +735,14 @@
 					<div class="funny-boxes funny-boxes-left-green">
 						<div class="row">
 							<div class="col-md-4 funny-boxes-img">
-								<img class="img-responsive" src="assets/img/main/img7.jpg" alt="">
+								<img class="img-responsive" src="assets/img/torneioTenis.jpg" alt="">
 								<ul class="list-unstyled">
-									<li><i class="fa-fw fa fa-briefcase"></i> Dell, Google</li>
-									<li><i class="fa-fw fa fa-map-marker"></i> New York, US</li>
+									<li><i class="fa-fw fa fa-briefcase"></i> Fractal, Cidade Jardim</li>
+									<li><i class="fa-fw fa fa-map-marker"></i> Goiania, GO</li>
 								</ul>
 							</div>
 							<div class="col-md-8">
-								<h2><a href="#">Blanditiis Praesentium</a></h2>
+								<h2><a href="#">[Realizado] Realizado 1º Torneio de Tênis organizado pelo Sports GO 05/10/16</a></h2>
 								<ul class="list-unstyled funny-boxes-rating">
 									<li><i class="fa fa-star"></i></li>
 									<li><i class="fa fa-star"></i></li>
@@ -750,7 +750,7 @@
 									<li><i class="fa fa-star-o"></i></li>
 									<li><i class="fa fa-star-o"></i></li>
 								</ul>
-								<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum.</p>
+								<p>Ocorreu na última quinta o primeiro torneio de Tênis organizado pelo Sports GO. Na ocasião estiveram reunidos 25 atletas amadores...</p>
 							</div>
 						</div>
 					</div>
@@ -762,8 +762,8 @@
 							<div class="col-md-4 funny-boxes-img">
 								<img class="img-responsive" src="assets/img/main/img8.jpg" alt="">
 								<ul class="list-unstyled">
-									<li><i class="fa-fw fa fa-briefcase"></i> Dell, Google</li>
-									<li><i class="fa-fw fa fa-map-marker"></i> New York, US</li>
+									<li><i class="fa-fw fa fa-briefcase"></i> Fractal Cidade Jardim</li>
+									<li><i class="fa-fw fa fa-map-marker"></i> Goiânia, GO</li>
 								</ul>
 							</div>
 							<div class="col-md-8">
