--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,6 +61,7 @@
 	<script src="lib/js/controllers/EventoController.js"></script>
 	<script src="lib/js/controllers/IndexController.js"></script>
 	<script src="lib/js/controllers/EventosHistoricoController.js"></script>
+	<script src="lib/js/controllers/EventoPorCategoriaController.js"></script>
 
 	<!-- JS Global Compulsory -->
 	<script type="text/javascript" src="assets/plugins/jquery/jquery.min.js"></script>
@@ -176,9 +177,9 @@
 									<li ng-if="usuarioLogado.usuario.length">
 										<a href="#/home/cadastro-esporte">Cadastro</a>
 									</li>
-									<li ng-if="usuarioLogado.usuario.length">
+									<!--<li ng-if="usuarioLogado.usuario.length">
 										<a href="#/home/eventosHistorico">Histórico</a>
-									</li>
+									</li>-->
 								
 							</ul>
 							</li>
